--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -9,6 +9,22 @@ jobs:
   rspec:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: myapp_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 1s
+          --health-retries 5
+
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -30,6 +46,20 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
+
+    - name: Setup Database
+      env:
+        RAILS_ENV: test
+        DATABASE_NAME_TEST: interview_test
+        POSTGRES_HOST: localhost
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_PORT: 5432
+        DATABASE_USER: postgres
+      run: |
+        bundle exec rails db:drop
+        bundle exec rails db:test:prepare
+        bundle exec rails db:seed
 
     - name: Determine Working Branch
       id: working_branch
