Attempt to add coverage

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -68,3 +68,9 @@ jobs:
     - name: Run RSpec Tests
       run: |
           bundle exec rspec
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage-report
+        path: coverage
