--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -74,3 +74,12 @@ jobs:
       with:
         name: coverage-report
         path: coverage
+
+    - name: trigger single Job
+      uses: appleboy/jenkins-action@0.0.2
+      with:
+        url: "http://192.168.1.3:8080"
+        user: "example"
+        token: ${{ secrets.TOKEN }}
+        job: "Test"
+            
